--- a/web/service/src/main/resources/application.properties
+++ b/web/service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8086
 
+config.db.server=jdbc:mysql://127.0.0.1:3306/db_ginkgo
+config.db.port=3306
+config.db.account=ginkgo
+config.db.password=beijing
+config.db.driver=com.mysql.cj.jdbc.Driver
+
+spring.application.name=ginkgo-web-service
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_ginkgo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
