修改登录时间

--- a/web/service/src/main/resources/application.properties
+++ b/web/service/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8086
 
+config.time_format=yyyy-MM-dd HH:mm:ss
+config.date_format=yyyy-MM-dd
+login_keep_time = 15000
+
 config.db.server=jdbc:mysql://127.0.0.1:3306/db_ginkgo
 config.db.port=3306
 config.db.account=ginkgo
