--- a/web/service/pom.xml
+++ b/web/service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/>
 	</parent>
 	<groupId>com.ginkgo</groupId>
-	<name>${project.artifactId}</name>
 	<artifactId>ginkgo-service</artifactId>
 	<version>0.0.1</version>
+	<name>${project.artifactId}</name>
 	<description>Ginkgo Service Project</description>
 	<packaging>jar</packaging>
 	<properties>
@@ -25,6 +25,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
@@ -65,6 +69,10 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 	</dependencies>
 
